# rover

src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: joint_names_rover_urdf_3.yaml
src/rover_description/launch/: display.launch.py  gazebo.launch.py
src/rover_description/meshes/: back_wheel_left.STL  back_wheel_right.STL  bogie_left.STL  bogie_right.STL  chassis.STL  differential_bar.STL  front_wheel_left.STL  front_wheel_right.STL  middle_wheel_left.STL  middle_wheel_right.STL  rocker_left .STL  rocker_right.STL  tht_heim_left.STL  tht_heim_right.STL
src/rover_description/urdf/: rover_description.csv  rover_description.urdf.xacro
